[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Logo/cenoura.jpg" type="Texture" id=2]
[ext_resource path="res://AudioPlayer.tscn" type="PackedScene" id=3]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.818
anchor_right = 0.5
anchor_bottom = 0.818
margin_left = -115.5
margin_top = -234.0
margin_right = 115.5

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 231.0
margin_bottom = 75.0
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="VBoxContainer/Control"]
margin_right = 230.0
margin_bottom = 50.0
text = "Jogar"

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 231.0
margin_bottom = 154.0
size_flags_vertical = 3

[node name="CreditsButton" type="Button" parent="VBoxContainer/Control2"]
margin_right = 230.0
margin_bottom = 50.0
text = "Cr√©ditos"

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 231.0
margin_bottom = 234.0
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="VBoxContainer/Control3"]
margin_right = 230.0
margin_bottom = 50.0
text = "Sair"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 641, 285 )
scale = Vector2( 0.361111, 0.361111 )
texture = ExtResource( 2 )
offset = Vector2( -0.000244141, -249.231 )

[node name="AudioPlayer_Override" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxContainer/Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control2/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Control3/ExitButton" to="." method="_on_ExitButton_pressed"]
